Switch to ngx-scrollbar, fix new row color in analysis mode

--- a/src/assets/styles/_table.scss
+++ b/src/assets/styles/_table.scss
@@ -27,7 +27,7 @@
             background-color: #D8E1FF;
         }
 
-        &.new > td > div, > td.new {
+        &.new > td > div, > td.new > div {
             background-color: #FFE5BC;
         }
 
@@ -418,4 +418,9 @@
 
 .cdk-drop-list-dragging .clr-checkbox-wrapper:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.note {
+    float: right;
+    font-size: 10px;
 }
